avoid print layout page breaks inside prompt divs

--- a/assets/index.sass
+++ b/assets/index.sass
@@ -155,6 +155,7 @@ form.minimal
     .prompt
       margin-top: 1em
       margin-bottom: 0
+      page-break-inside: avoid
 
       textarea
         resize: none
